[package]
name = "spooks"
version = "0.1.0"
edition = "2024"

[lib]
name = "spooks"
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.1"
log = "0.4.27"
simplelog = "0.12.2"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
]
